Implemented ComplexDataDisplay for X,Y Sensor testing.

--- a/CCTVClient.csproj
+++ b/CCTVClient.csproj
@@ -53,6 +53,9 @@
     </Compile>
     <Compile Include="AnalogDataItem.cs" />
     <Compile Include="CCTVWebServer.cs" />
+    <Compile Include="CompundDataDisplay.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ContextPanel.cs">
       <SubType>Component</SubType>
     </Compile>
