--- a/CCTV.cfg
+++ b/CCTV.cfg
@@ -1,3 +1,66 @@
-﻿bullshit=nonsense
-cat=morenonsense
-defaultport=COM4
+﻿//Defnition file for the data definitions, relative to .exe path.
+definition_location=definitions.xml
+
+
+//=========HTTP==========
+//Default HTTP server port
+http_port_default=174
+
+
+
+//========SERIAL=========
+//Default Serial Comm Port
+serial_port_default=COM4
+
+//Delay between reads in the serial Rx thread (ms)
+serial_read_interval=10
+
+//standard length of data bits per byte
+serial_data_bits=8
+
+//handshaking protocol for serial port transmission of data
+serial_handshake=None
+
+//parity-checking protocol
+serial_parity=None
+
+//---------Grouped, read notes at end--------------------
+//Default Serial baud rate
+serial_rate_default=9600
+
+//Delay between reads in the serial Rx thread (ms)
+serial_read_interval=10
+
+//Size of input buffer(power of 2 please.)
+serial_read_buffer_size=1024
+
+// So you'll notice that with a high baud rate and high read interval, your data will be sluggish to display. 
+// A breid guide to this group -> Opposites apply here.
+// If your serial_read_interval is high, lower your serial_rate_default OR serial_read_buffer_size
+// If your serial_read_buffer_size is high, increase your serial_rate_default AND lower your serial_read_interval
+// If your serial_rate_default is high (hopefully your MCU can handle it..), increase your serial_read_buffer_size OR your serial_read_interval
+// If you are hungry, eat. 
+// If you've been awake for over 30 hours, sleep.
+
+//standard number of stopbits per byte
+serial_stop_bits=One
+
+//The string sent from the client to an MCU to start the MCU's transmission of data
+serial_broadcast_start=GO!
+
+//The string sent from the client to an MCU to stop the MCU's transmission of data
+serial_broadcast_stop=STOP!
+
+
+//=======SMTP(For SMS Alerts)===============
+smtp_server=mail.oneseventyfour.com
+smtp_port=26
+smtp_username=mailer+oneseventyfour.com
+smtp_password=password
+
+//Name being used for smtp
+smtp_label=SmartCCTV Alert
+
+//=======Stuff for me=======
+version_number=0.25
+build_date=8/17/2012
