--- a/CCTVClient.csproj
+++ b/CCTVClient.csproj
@@ -53,7 +53,7 @@
     </Compile>
     <Compile Include="AnalogDataItem.cs" />
     <Compile Include="CCTVWebServer.cs" />
-    <Compile Include="CompundDataDisplay.cs">
+    <Compile Include="CompoundDataDisplay.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ContextPanel.cs">
@@ -93,6 +93,10 @@
     <Compile Include="Setup.Designer.cs">
       <DependentUpon>Setup.cs</DependentUpon>
     </Compile>
+    <Compile Include="SMSAlert.cs" />
+    <Compile Include="Subscriber.cs" />
+    <Compile Include="SubscriberManager.cs" />
+    <Compile Include="Subscription.cs" />
     <EmbeddedResource Include="MainPage.resx">
       <DependentUpon>MainPage.cs</DependentUpon>
     </EmbeddedResource>
@@ -111,6 +115,7 @@
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="CCTV.cfg" />
+    <None Include="SMSGateways.cfg" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -123,9 +128,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="appBG.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="meta.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
